# OS_1_lab

./: .gitignore  CMakeLists.txt  child.c  parent.c
include/: sum.h
src/: child.c  sum.c
